# 2025_fall

./: .gitignore  HOLD_README_SADINA_TEAM_A.md  OneDrive - UMGC  README.md  README_SadinaTeamA.md
.github/workflows/: Build and Deploy Flutter Web Zip to S3.yml  Build and Deploy Lambda ZIP to S3 dev.yml  Build and Deploy Lambda ZIP to S3 prod.yml  Build and Deploy Lambda ZIP to S3.yml  Build and Deploy Lambda ZIP to S3yml  asl-service.yml  build-upload-lambda.yml  careconnect_asl_pages.yml  learninglens.yml  sonarcloud.yml
FallDetection/: README.md
FallDetection/Backend/: pom.xml
FallDetection/ContextCollection/: ALERTS_FEATURE.md  BACKGROUND_IMAGE_FEATURE.md  CAMERA_IMAGES_STATUS.md  COMPLETE_RESOLUTION.md  LIVE_SKELETON_BUTTON_COMPLETE.md  MQTT_BINARY_FIX_COMPLETE.md  QUICKSTART_REAL_SKELETON.md  REAL_SKELETON_COMPLETE.md  SECURITY_CONTEXT_FIX.md  SKELETON_FILE_FIX.md  SKELETON_PAINTER_FIX.md  SKELETON_SOLUTION_FINAL.md  STREAM_SUBSCRIPTION_FIX.md  VISUAL_GUIDE.md
LearningLens2025/: .gitignore  DEPLOYMENT_STEPS.md  README.md  docker-compose.yml  instructions.md  pubspec.yaml
LearningLens2025/legacy_files/focused-ai-grader-service/lambda-functions/cpp/: CMakeLists.txt  Dockerfile  main.cpp  template-java-cpp.yaml
LearningLens2025/legacy_files/focused-ai-grader-service/lambda-functions/cpp/.aws-sam/: build.toml
TeamA/Auth/: README.md
careconnect2025/: .gitignore  ARCHITECTURE.md  AWS_DEPLOYMENT_GUIDE.md  Postman  RATE_LIMITING_IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.db.yml  test-deepseek-chat.sh
careconnect_asl/: README.md  pubspec.yaml
(+1740 files in other folders)
